Finally fixed the bug with the topmost loader div in rake modal window not fitting its section's sizes. Really, should've just specified position: relative for the user-info section, but sometimes you are unable to see even such trivial mistakes.

--- a/zettel_notes_app6/css/style.css
+++ b/zettel_notes_app6/css/style.css
@@ -257,6 +257,7 @@ body {
 .modal__rake_window__user_info {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 div.modal__rake_window__section__user_text_container {
@@ -914,11 +915,22 @@ div.note__list-item {
 /* .sk-circle */
 /* .main-loader.sk-circle-wrapper */
 
+/* .user_info-loader {
+    /* position: absolute; */
+    /* display: initial !important;
+} */
+
+
+.user_info-loader,
 .keywords-loader_label{
     color: white;
     text-align: center;
     margin: auto;
 }
+
+/* .modal__rake_window_user_info-wrapper {
+    position: relative;
+} */
 
 .sk-circle-wrapper{
     display: none;
@@ -927,8 +939,6 @@ div.note__list-item {
     height: 100%;
     width: 100%;
     z-index: 2000;
-    width: 100%;
-    height: 100%;
     background-color: rgba(0,0,0,0.4);
 }
 
